# AI-twitter-sentiment-analysis

./: README.md  main.py  pyproject.toml
