[project]
name = "twitter-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "load-dotenv>=0.1.0",
    "torch>=2.1.0",
    "scipy>=1.16.1",
    "textblob>=0.19.0",
    "transformers>=4.55.4",
    "tweepy>=4.16.0",
]
